messing with how the PTF can be conditioned

--- a/Model Testing.ipynb
+++ b/Model Testing.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "adf7b69a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda:0 _CudaDeviceProperties(name='NVIDIA GeForce RTX 3060 Laptop GPU', major=8, minor=6, total_memory=6143MB, multi_processor_count=30)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PTFRNN import *\n",
     "import os"
@@ -481,16 +473,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "6809414a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:0 _CudaDeviceProperties(name='NVIDIA GeForce RTX 3080 Ti', major=8, minor=6, total_memory=12287MB, multi_processor_count=80)\n",
+      "Sequential(\n",
+      "  (0): Linear(in_features=128, out_features=256, bias=True)\n",
+      "  (1): ReLU()\n",
+      "  (2): Linear(in_features=16, out_features=16, bias=True)\n",
+      "  (3): Softmax(dim=-1)\n",
+      ")\n",
+      "1949872\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sprag\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\jit\\_recursive.py:229: UserWarning: 'batch_first' was found in ScriptModule constants, but was not actually set in __init__. Consider removing it.\n",
+      "  \"Consider removing it.\".format(name))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PTFRNN import *\n",
+    "op=Opt(K=256,Q=1,Nh=128,dir=\"PPTF\",hamiltonian=\"Rydberg\")\n",
+    "op.B=op.K*op.Q\n",
+    "op.patch=4\n",
+    "op.L= 256\n",
+    "op._2D=True\n",
+    "op.sgrad=False\n",
+    "op.NLOOPS=16\n",
+    "\n",
+    "pb = PTFRNN(16,op.patch,_2D=op._2D,Nh=op.Nh,num_layers=2,rnnargs={\"p\":2,\"_2D\":True})\n",
+    "\n",
+    "#Nh=[16,128,128]\n",
+    "altnet = PTF(4,2,_2D=True,Nh=[16,128,256],nhead=1,num_layers=1)\n",
+    "pb.prnn=altnet\n",
+    "\n",
+    "print(altnet.lin)\n",
+    "\n",
+    "print(sum([p.numel() for p in pb.parameters()]))\n",
+    "\n",
+    "pb1 = torch.jit.script(pb)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fd78a12f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output folder path established\n",
+      "-0.38052 256\n",
+      "1,3.033|\n",
+      "246,-0.345|491,-0.349|736,-0.356|981,-0.364|1225,-0.375|1470,-0.378|"
+     ]
+    }
+   ],
+   "source": [
+    "beta1=0.9;beta2=0.999\n",
+    "optimizer = torch.optim.Adam(\n",
+    "pb.parameters(), \n",
+    "lr=op.lr,\n",
+    "betas=(beta1,beta2)\n",
+    ")\n",
+    "\n",
+    "debug = reg_train(op,(pb,optimizer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a9ff38a",
    "metadata": {},
    "outputs": [],
    "source": []
