alternate ptf made to be used inside the ptfrnn

--- a/Model Testing.ipynb
+++ b/Model Testing.ipynb
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6a835ef",
+   "id": "857b0535",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +485,7 @@
       "  (2): Linear(in_features=32, out_features=16, bias=True)\n",
       "  (3): Softmax(dim=-1)\n",
       ")\n",
-      "2071120\n"
+      "2079696\n"
      ]
     },
     {
@@ -499,6 +499,7 @@
    ],
    "source": [
     "from PTFRNN import *\n",
+    "from PTFB import PTFB\n",
     "#torch.set_default_tensor_type(torch.DoubleTensor)\n",
     "op=Opt(K=256,Q=1,Nh=128,dir=\"PPTF\",hamiltonian=\"Rydberg\")\n",
     "op.B=op.K*op.Q\n",
@@ -511,7 +512,7 @@
     "pb = PTFRNN(16,op.patch,_2D=op._2D,Nh=op.Nh,num_layers=2,rnnargs={\"p\":2,\"_2D\":True})\n",
     "\n",
     "#Nh=[16,128,128]\n",
-    "altnet = PTF(4,2,_2D=True,Nh=[32,128],nhead=1,num_layers=1)\n",
+    "altnet = PTFB(4,2,_2D=True,Nh=[32,128],nhead=4,num_layers=1)\n",
     "pb.prnn=altnet\n",
     "\n",
     "print(altnet.lin)\n",
@@ -533,9 +534,7 @@
      "text": [
       "Output folder path established\n",
       "-0.38052 256\n",
-      "1,2.802|\n",
-      "243,-0.329|486,-0.345|729,-0.352|971,-0.358|1214,-0.366|1457,-0.371|1699,-0.377|1941,-0.378|\n",
-      "2184,-0.380|2427,-0.379|2670,-0.379|2912,-0.380|3155,-0.379|3398,-0.379|"
+      "1,3.329|\n"
      ]
     }
    ],
@@ -553,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "602b1eb3",
+   "id": "f4ced5f9",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1de23e20",
+   "id": "55eeaf1c",
    "metadata": {},
    "outputs": [],
    "source": []
