Fixed bug in model builder

--- a/Model Testing.ipynb
+++ b/Model Testing.ipynb
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "816e037b",
+   "id": "9d03b178",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c7047516",
+   "id": "d9493200",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cd39f68b",
+   "id": "77a63062",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1c6402f2",
+   "id": "23f4e1da",
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8226e07a",
+   "id": "e75f229f",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ffc82fb5",
+   "id": "d7b8ed9a",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "44adc1dd",
+   "id": "9aea9af1",
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4ef7d3cd",
+   "id": "ac505907",
    "metadata": {},
    "outputs": [
     {
@@ -1026,10 +1026,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6264d79a",
+   "execution_count": 29,
+   "id": "7432df3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.system(\"python FineTune.py TRANSFER\\\\Rydberg\\\\2304-B=512-K=512-P=6x6_LPTF\\\\0 L=2304 NLOOPS=64 K=64 Q=4 B=256 steps=3000 patch=6x6_LPTF\")"
    ]
@@ -1037,7 +1048,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01bf5d12",
+   "id": "2e7a0bbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(\"python ModelBuilder.py L=144 NLOOPS=9 patch=2x2 --ptf _2D=True patch=2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "970a7775",
    "metadata": {},
    "outputs": [],
    "source": []
