Adding in better documentation part 1

--- a/Model Testing.ipynb
+++ b/Model Testing.ipynb
@@ -1040,6 +1040,17 @@
    "id": "01bf5d12",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import os\n",
+    "os.system(\"python ModelBuilder.py L=144 K=256 Q=1 NLOOPS=36 --ptf _2D=True patch=2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a828c35",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
