Added Demo Model for the ModelLoader and Transfer Tutorial

--- a/Results.ipynb
+++ b/Results.ipynb
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9d1c28e",
+   "id": "d89d22e2",
    "metadata": {},
    "outputs": [
     {
@@ -977,11 +977,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "071ea6b7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tmp=np.load(\"E:\\\\SharedContent\\\\NN-QSR\\\\PTF\\\\Rydberg\\\\64-NoQ-B=256-K=256-Nh=128-kl=0.00\\\\0\\\\DEBUG.npy\")\n",
+    "tmp2=np.load(\"E:\\\\SharedContent\\\\NN-QSR-v2\\\\PTF\\\\Rydberg\\\\64-B=256-K=256\\\\1\\\\DEBUG.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "65bd1a1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "903.4164845943451"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp[-1,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "76eaf4b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "981.6357233524323"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp2[-1,-1]"
+   ]
   }
  ],
  "metadata": {
