--- a/Model Testing.ipynb
+++ b/Model Testing.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda:0 _CudaDeviceProperties(name='NVIDIA GeForce RTX 3080 Ti', major=8, minor=6, total_memory=12287MB, multi_processor_count=80)\n"
+      "cuda:0 _CudaDeviceProperties(name='NVIDIA GeForce RTX 3060 Laptop GPU', major=8, minor=6, total_memory=6143MB, multi_processor_count=30)\n"
      ]
     }
    ],
@@ -31,6 +31,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "40bf0b67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "L=\"8x8\"\n",
+    "\n",
+    "Lx,Ly=[int(L**0.5)]*2 if type(L) is int else [int(a) for a in L.split(\"x\")]\n",
+    "\n",
+    "print(Lx,Ly)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "04f3bc94",
    "metadata": {},
@@ -42,37 +64,41 @@
       "tensor([[ 0,  1,  2,  3,  4,  5],\n",
       "        [ 6,  7,  8,  9, 10, 11],\n",
       "        [12, 13, 14, 15, 16, 17],\n",
-      "        [18, 19, 20, 21, 22, 23],\n",
-      "        [24, 25, 26, 27, 28, 29],\n",
-      "        [30, 31, 32, 33, 34, 35]])\n",
-      "tensor([[[ 0,  1,  2,  6,  7,  8, 12, 13, 14],\n",
-      "         [ 3,  4,  5,  9, 10, 11, 15, 16, 17],\n",
-      "         [18, 19, 20, 24, 25, 26, 30, 31, 32],\n",
-      "         [21, 22, 23, 27, 28, 29, 33, 34, 35]]])\n",
+      "        [18, 19, 20, 21, 22, 23]], device='cuda:0')\n",
+      "tensor([[[ 0,  1,  2,  6,  7,  8],\n",
+      "         [ 3,  4,  5,  9, 10, 11],\n",
+      "         [12, 13, 14, 18, 19, 20],\n",
+      "         [15, 16, 17, 21, 22, 23]]], device='cuda:0')\n",
       "tensor([[ 0,  1,  2,  3,  4,  5],\n",
       "        [ 6,  7,  8,  9, 10, 11],\n",
       "        [12, 13, 14, 15, 16, 17],\n",
-      "        [18, 19, 20, 21, 22, 23],\n",
-      "        [24, 25, 26, 27, 28, 29],\n",
-      "        [30, 31, 32, 33, 34, 35]])\n"
+      "        [18, 19, 20, 21, 22, 23]], device='cuda:0')\n"
      ]
     }
    ],
    "source": [
-    "x = torch.arange(36).unsqueeze(0)\n",
+    "x = torch.arange(24,device=device).unsqueeze(0)\n",
     "\n",
-    "patch2d = Patch2D(3,6)\n",
+    "patch2d = Patch2D(2,3,4,6)\n",
     "\n",
-    "patch1d = Patch1D(9,36)\n",
+    "\n",
+    "\n",
+    "patch1d = Patch1D(6,24)\n",
     "\n",
     "y2 = patch2d(x)\n",
     "\n",
     "y1 = patch1d(x)\n",
     "\n",
-    "print(x.view(6,6))\n",
+    "print(x.view(4,6))\n",
     "\n",
     "print(y2)\n",
-    "print(patch2d.reverse(y2).view(6,6))\n",
+    "\n",
+    "\n",
+    "print(patch2d.reverse(y2).view(4,6))\n",
+    "\n",
+    "\n",
+    "#print(patch2d.reverse(y2))\n",
+    "\n",
     "#print(y1)\n",
     "#print(patch1d.reverse(y1).view(6,6))\n",
     "\n"
@@ -88,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 126,
    "id": "be6fe5ae",
    "metadata": {},
    "outputs": [
@@ -103,7 +129,7 @@
        "        [2., 1.]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
