--- a/RNN-QSR.ipynb
+++ b/RNN-QSR.ipynb
@@ -1747,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1846cdce",
+   "id": "05961913",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1755,7 +1755,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1769,7 +1769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
