Added random seeds (still nondeterministic but initialization is identical)

--- a/Model Testing.ipynb
+++ b/Model Testing.ipynb
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ceb56f9f",
+   "id": "340be421",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ec9db7f4",
+   "id": "190958ef",
    "metadata": {},
    "outputs": [
     {
@@ -577,6 +577,24 @@
     "os.system(\"git commit -a -m \\\"Auto Commit\\\"\")\n",
     "os.system(\"git push origin\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c1d81fcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a03b975",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
